--- a/08.login.html
+++ b/08.login.html
@@ -2,18 +2,28 @@
 <html lang="en">
 
 <head>
-  <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-  <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="./css/bootstrap.css">
+  <title>Login</title>
+  <style>
+    html,
+    body {
+      height: 100%;
+    }
 
-  <title>Hello, world!</title>
+    body {
+      width: 100vw;
+      height: 100vh;
+      background-image: url("https://picsum.photos/1920/1080/?random=1");
+      background-repeat: no-repeat;
+    }
+  </style>
 </head>
 
 <body>
-  <h1>Hello, world!</h1>
+
+
 
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
