--- a/08.login.html
+++ b/08.login.html
@@ -17,12 +17,44 @@
       height: 100vh;
       background-image: url("https://picsum.photos/1920/1080/?random=1");
       background-repeat: no-repeat;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    #login {
+      opacity: 0.8;
+      border-radius: 1rem;
+    }
+
+    .w-20 {
+      width: 20%;
     }
   </style>
 </head>
 
 <body>
 
+  <form id="login" class="w-20 h-50 bg-light px-4 py-3">
+    <h2 class="text-center my-4">Sign In</h2>
+    <div class="form-group input-group input-group-lg">
+      <input type="text" class="form-control" id="name" placeholder="Username">
+    </div>
+    <div class="form-group input-group input-group-lg">
+      <input type="password" class="form-control" id="password" placeholder="Password">
+    </div>
+    <button type="submit" class="btn btn-lg w-100 btn-primary">Login in</button>
+
+    <div class="form-group mt-3 d-flex justify-content-between">
+      <div class="form-check">
+        <input class="form-check-input" type="checkbox" value="" id="remember">
+        <label class="form-check-label" for="remember">
+          Remember me
+        </label>
+      </div>
+      <a href="#" class="text-decoration-none">Forgot Password?</a>
+    </div>
+  </form>
 
 
   <!-- Optional JavaScript -->
