--- a/08.login.html
+++ b/08.login.html
@@ -5,6 +5,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="stylesheet" href="./css/bootstrap.css">
+  <!-- fontawsome -->
+  <link rel="stylesheet" href="./css/all.min.css">
   <title>Login</title>
   <style>
     html,
@@ -22,39 +24,83 @@
       align-items: center;
     }
 
+    #loginF {
+      width: 85%;
+      left: 50%;
+      top: 50%;
+      transform: translate(-50%, -50%);
+    }
+
     #login {
       opacity: 0.8;
       border-radius: 1rem;
     }
 
+    #head {
+      width: 7rem;
+      height: 7rem;
+      background-color: #007bff;
+      border-radius: 50%;
+      text-align: center;
+      line-height: 7rem;
+
+
+      color: #fff;
+      font-size: 4.3rem;
+      position: absolute;
+      left: 50%;
+      top: -3.5rem;
+      transform: translate(-50%, 0);
+      z-index: 2;
+      position: relative;
+    }
+
     .w-20 {
       width: 20%;
+    }
+
+    .form-group {
+      margin-bottom: 1.5rem;
     }
   </style>
 </head>
 
 <body>
 
-  <form id="login" class="w-20 h-50 bg-light px-4 py-3">
-    <h2 class="text-center my-4">Sign In</h2>
-    <div class="form-group input-group input-group-lg">
-      <input type="text" class="form-control" id="name" placeholder="Username">
-    </div>
-    <div class="form-group input-group input-group-lg">
-      <input type="password" class="form-control" id="password" placeholder="Password">
-    </div>
-    <button type="submit" class="btn btn-lg w-100 btn-primary">Login in</button>
-
-    <div class="form-group mt-3 d-flex justify-content-between">
-      <div class="form-check">
-        <input class="form-check-input" type="checkbox" value="" id="remember">
-        <label class="form-check-label" for="remember">
-          Remember me
-        </label>
+  <form id="login" class="w-20 h-50 bg-light px-4 py-3 position-relative">
+    <i id="head" class="far fa-user"></i>
+    <div id="loginF" class="position-absolute">
+      <h2 class="text-center my-4">Sign In</h2>
+      <div class="form-group input-group input-group-lg">
+        <!-- input 前 -->
+        <div class="input-group-prepend">
+          <i class="input-group-text border-0 fas fa-user bg-white"></i>
+        </div>
+        <input type="text" class="form-control  border-0" id="name" placeholder="Username">
       </div>
-      <a href="#" class="text-decoration-none">Forgot Password?</a>
+
+      <div class="form-group input-group input-group-lg">
+        <!-- input 前 -->
+        <div class="input-group-prepend">
+          <i class="input-group-text border-0 fas fa-lock bg-white"></i>
+        </div>
+        <input type="password" class="form-control  border-0" id="password" placeholder="Password">
+      </div>
+
+      <button type="submit" class="btn btn-lg w-100 btn-primary my-2">Login in</button>
+
+      <div class="form-group mt-3 d-flex justify-content-between">
+        <div class="form-check">
+          <input class="form-check-input" type="checkbox" value="" id="remember">
+          <label class="form-check-label" for="remember">
+            Remember me
+          </label>
+        </div>
+        <a href="#" class="text-decoration-none">Forgot Password?</a>
+      </div>
     </div>
   </form>
+
 
 
   <!-- Optional JavaScript -->
