用背景去做透明度(Done)

--- a/08.login.html
+++ b/08.login.html
@@ -32,7 +32,9 @@
     }
 
     #login {
-      opacity: 0.8;
+      background-color: hsl(210, 17%, 98%, 0.8) !important;
+      /* 若子元素不想受到父層 opacity影響，可以使用 rgba 來淡化 */
+      /* opacity: 0.8; */
       border-radius: 1rem;
     }
 
